--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>내 개인 웹페이지</title>
+    <title> HTML에 CSS디자인을 적용한 실습 웹페이지</title>
     <link rel="stylesheet" href="실습style.css">
 </head>
 <body>
     <div class="container">
-        <h1>환영합니다!</h1>
-        <p>이것은 스타일이 적용된 개인 웹페이지입니다.</p>
+        <h1>안녕하세요 !</h1>
+        <p>"HTML과 Markdown이란?"포스트의 실습 결과입니다.</p>
         <button class="styled-button">클릭하세요</button>
     </div>
 </body>
