--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>안녕하세요 !</h1>
-        <p>"HTML과 Markdown이란?"포스트의 실습 결과입니다.</p>
+        <p>"HTML과 Markdown이란?"포스트의 실습 결과물입니다.</p>
         <button class="styled-button">클릭하세요</button>
     </div>
 </body>
